internal/fixtures/architecture/negative/private-import/apps/web/src/bad.ts
import { hidden } from "@deepwork/sdk/internal";

export const forbidden = hidden;
